chore: address dupe execution, double enqueue, history revision
